feat(provider): add commercelayer provider folder

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,9 @@
 # Available providers: bigcommerce, shopify, swell
-COMMERCE_PROVIDER=
+COMMERCE_PROVIDER=commercelayer
+
+COMMERCELAYER_CLIENT_ID="zoo0F4TdTf3WYOctbGphY6NVoZ6LERH2FLPzi-Aq1U8"
+COMMERCELAYER_ENDPOINT="https://vercel-commerce-demo.commercelayer.io"
+COMMERCELAYER_MARKET_SCOPE="market:all"
 
 BIGCOMMERCE_STOREFRONT_API_URL=
 BIGCOMMERCE_STOREFRONT_API_TOKEN=
