--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "node": "14.x"
   },
   "dependencies": {
+    "@commercelayer/js-auth": "^2.0.4",
+    "@commercelayer/js-sdk": "^4.1.3",
     "@reach/portal": "^0.11.2",
     "@vercel/fetch": "^6.1.0",
     "autoprefixer": "^10.2.4",
